2.0.0.13
- FIXED: Compressed files appear twice in the search result list. 

2.0.0.12
- Indexing subdirectories 
- Indexing compressed files and archives: zip, rar, jar, gzip, tar, bzip2
- Calculating CRC
- Automatically add files and folders from CD/DVD when new volume is inserted into a drive
- Enhanced search options
- Save, Save as, Open, and New commands are available when dealing with database file
- Opening (at start up) last closed database file
- Auto eject option
- Searching by keywords can be case sensitive or case insensitive
- Auto update (ClickOnce technology)

1.4
- New column in the list view: File Extension
- You can store the physical location of CD/DVD
- Japanese language version
- Turkish language version
- Dutch language version

1.3
- Russian language version
- German language version
- Portuguese (Brasil) language version
- "Find in Database" command available in the search view

1.2
- File count and file size are displayed in status bar in all cases
- External hard disks can be indexed
- New commands under Help
- Name changed to Blue Mirror CD/DVD Indexer

1.1.0.5
- License info problem fixed
- Localization issues fixed

1.1 
- Updated contact details, license and version info
- Polish language version

1.0 Beta
- Minor bugs removed
- Database file location can be set by the user
- Export database using csv format
- New search definitions implemented
- Import/export added
- New AboutBox