@@ -155,57 +155,57 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj0yLjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACc
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACU
         CwAAAk1TRnQBSQFMAgEBAgEAAQQBAAEEAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABEAMAAQEBAAEgBgABECIAAycBOwNOAZQBZQFfAVwBzgGBAXABWQHrAYEBcAFZAesBZQFfAVwBzgNO
-        AZQDJwE72AADCgENA04BlgGkAXsBTQH6AeEBzQG5Af8B8QHgAc4B/wH5AecB1gH/AfgB5gHUAf8B8AHd
-        AcwB/wHhAc0BuQH/AaQBewFNAfoDTgGWAwoBDcwAAwoBDQFZAlcBuAHZAb8BpQH/Af4B8gHkAv8B5wHP
-        Af8B/AHbAbsB/wH5AdMBsgH/AfYB0AGsAf8B9AHRAa4B/wH2AdgBuwH/AfoB6QHXAf8B2QG/AaUB/wFZ
-        AlcBuAMKAQ0IAANAAXABUgJUAaYBSQFrAYYB6gE2AYIBsAH3ATYBggGwAfcBNgGCAbAB9wE2AYIBsAH3
-        ATYBggGwAfcBNgGCAbAB9wE2AYIBsAH3ATYBggGwAfcBNgGBAbAB9wFDAXUBnwHxA0wBk4gAA04BlgHZ
-        Ab8BpQL/AfgB6wL/AesB0QL/AeEBwwH/Af4B2wG6Af8B+wHWAbIB/wH3AdEBrAH/AfYBzgGpAf8B8wHL
-        AaUB/wHyAc0BqAH/AfoB4QHKAf8B2QG/AaUB/wNOAZYIAAFQAW8BgwHmAZoBpAGlAfABpwHGAd0B/QGe
-        AdsB9AH/AZYB2gHzAf8BjgHYAfMB/wGGAdcB8wH/AXkB1AHyAf8BcwHTAfIB/wFsAdIB8QH/AWYB0AHx
-        Af8BYwHPAfEB/wGxAdkB5wH+AUIBdgGYAfCEAAMmATgBsgGHAUwB/QL+AfoC/wH5AekC/wHvAdgC/wHn
-        Ac0C/wHhAcIB/wH8AdwBuwH/AfkB1QGzAf8B9gHQAawB/wH2Ac0BqAH/AfMBywGlAf8B8wHNAakB/wH6
-        AeoB2QH/AbIBhwFMAf0DJgE4BAABNgGHAbAB9wHvAfoB/gH/AaEB6QH5Af8BkQHlAfgB/wGBAeEB9wH/
-        AWwB3gH2Af8BXQHaAfUB/wFOAdcB9AH/AUEB0wHzAf8BMwHQAfIB/wEoAc0B8QH/ASABywHwAf8BygHy
-        AfsB/wE2AYcBsAH3hAADTgGWAeIBzgG6Af8B9wHeAcYC/wHpAdEC/wH2AeIC/wHyAd0C/wHwAd0B/wH4
-        AeoB2QH/AfgB5gHUAf8B+wHfAccB/wH1Ac8BqwH/AfIBygGkAf8B8wHMAagB/wH4Ad0BwwH/AeIBzgG6
-        Af8DTgGWBAABOQGMAbYB+AHyAfoB/QH/AbMB7QH6Af8BpAHpAfkB/wGVAeYB+AH/AYUB4gH3Af8BcAHe
-        AfYB/wFfAdsB9QH/AVEB1wH0Af8BQwHUAfMB/wE1AdEB8gH/ASoBzgHxAf8BzAHyAfsB/wE2AYgBsAH3
-        hAABZQFgAVsB0AHvAeAB0AH/AecBvgGWAf8B5wG8AZQB/wHwAcwBqQH/Af4B7AHaAf8B3QHEAawB/wF7
-        AWwBXAHnAXsBbAFcAecB3QHDAaoB/wH4Ad0BxAH/AfQB0gGyAf8B9gHUAbMB/wH1AdYBuAH/AfEB3wHP
-        Af8BZQFgAVsB0AQAAUEBjgG3AfkB9gH8Af4B/wHIAfIB/AH/AbkB7wH7Af8BrAHsAfoB/wGcAegB+QH/
-        AYsB4wH3Af8BdgHgAfYB/wFmAdwB9gH/AVcB2QH1Af8BSQHWAfQB/wE+AdMB8wH/AdAB8wH8Af8BNgGJ
-        AbAB94QAAYIBbwFZAewB9QHkAdUB/wHpAb4BlwH/AegBvAGWAf8B5wG8AZQB/wHzAd4BygH/AXsBagFY
-        AeYDFAEbAxQBGwF7AWoBWAHmAfYB4wHTAf8B8QHNAasB/wHvAckBpAH/Ae0ByQGkAf8B9gHkAdIB/wGC
-        AW8BWQHsBAABPQGaAboB+gH+A/8B+AH9Av8B9gH9Av8B9QH8Av8B8wH8Af4B/wHYAfYB/AH/AZQB5gH4
-        Af8BhQHjAfcB/wFwAd8B9gH/AWIB2wH1Af8BVgHYAfQB/wHXAfQB/AH/ATYBjQGwAfeEAAGCAW8BWQHs
-        AfUB5AHVAf8B6QG/AZkB/wHpAcABmQH/AekBwQGaAf8B8wHdAckB/wF7AWoBWAHmAxQBGwMUARsBewFq
-        AVgB5gH4AegB2QH/AfIB0gGyAf8B8AHMAasB/wHwAcwBqwH/AfYB5AHTAf8BggFvAVkB7AQAATsBngG6
-        AfoB6AH2AfsB/wGUAdQB7wH/AYgBzgHuAf8BbQHBAekB/wHJAekB9gH/AfIB/AH+Af8B8wH8Af4B/wHy
-        AfwB/gH/AfAB/AH+Af8B7wH7Af4B/wHuAfsB/gH/Af4D/wE3AZQBsAH3hAABZQFgAVsB0AHwAeEB0QH/
-        AeoBxAGhAf8B6QHBAZsB/wHpAcABlwH/AfEBzgGyAf8B3AHDAaoB/wF7AWwBXAHnAXsBbAFcAecB3QHE
-        AawC/wH8AfMC/wH0AeUC/wHuAdoB/wH8AeUB0QH/AfEB4QHRAf8BZQFgAVsB0AQAAUcBiAGgAfIB8QH6
-        Af0B/wGUAd4B9QH/AZMB3AH0Af8BgQHVAfIB/wFkAcoB7QH/AWYBywHqAf8BhQHTAe8B/wGAAdIB7wH/
-        AXQB0AHvAf8BcAHPAe4B/wFsAc8B7gH/AekB9wH7Af8BPQGLAaEB84QAA04BlgHiAc4BugH/AfEB0gG2
-        Af8B6wHBAZsB/wHrAb8BmQL/AeQB0wL/AegB2wH/AfMB2gHHAf8B+AHxAeQC/wH4Ae0C/wH3AekC/wH+
-        AfEC/wH8Ae8C/wH8AfIB/wHiAc4BugH/A04BlgQAAUIBhQGYAfAB9wH8Af4B/wGOAeQB+AH/AZEB3gH1
-        Af8BnwHgAfUB/wGsAeEB9gH/Ae8B+wH+Af8B9AH9Af4B/wHzAfwB/gH/AfEB/AH+Af8B7wH7Af4B/wHu
-        AfsB/gH/AtIB1AH5AVgBaQFtAdSEAAMmATgBsgGHAUwB/QH6Ae0B4QH/AewBxwGjAv8B7AHaBf8B9wHN
-        AbYB/wHsAb0BlwL/AfQB3AP/AfcC/wH3AegD/wHzA/8B+QH/Av4B+QH/AbIBhwFMAf0DJgE4BAABOQGa
-        AbYB+AH9Av4B/wH+A/8C/gL/Af0B/gL/Af4D/wHqAfcB+wH/AWoBrQG+AfkBXAGpAbwB+AFcAakBvAH4
-        AVwBqQG8AfgBbQGqAbsB9wFhAXYBfQHhAzUBVogAA04BlgHZAb8BpQL/AfoB8Ab/Af0B8wH/AfABwQGj
-        Af8B7gHGAaAB/wH9AfAB0QP/Af4C/wH9AfAC/wH9AfEF/wHZAb8BpQH/A04BlggAAVcBZAFoAdABTwGo
-        AcQB+gFRAakBxQH6AVEBqQHFAfoBUQGpAcUB+gFQAakBxQH6AVYBcAF1Ad0DEAEWAwsBDwMLAQ8DCwEP
-        AwsBDwMLAQ8DAwEEiAADCgENAVkCVwG4AdkBvwGlAf8B/gH9AfwC/wHxAeQB/wHyAcoBrgH/AfIB0gGt
-        Af8B+QHtAcgD/wH3A/8B/QH/Af4B/QH8Af8B2QG/AaUB/wFZAlcBuAMKAQ3MAAMKAQ0DTgGWAaQBewFN
-        AfoB4QHNAbkB/wHxAeIB1AH/AfkB7AHfAf8B+wHzAeUB/wH0Ae0B5AH/AeIBzgG7Af8BpAF7AU0B+gNO
-        AZYDCgEN2AADJwE7A04BlAFlAV8BXAHOAYEBcAFZAesBhQFvAVgB7wFpAWMBWwHZA08BlwMnATvQAAFC
-        AU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAB8AEPAv8EAAHAAQMC/wQAAYABAQGA
-        AQEEAAGAAQEBgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEBBgABgAEB
-        BAABgAEBAYABAQQAAYABAQL/BAABwAEDAv8EAAHwAQ8C/wQACw==
+        AwABEAMAAQEBAAEgBgABECIAAycBOwNOAZQBYgFeAVwBzgF9AWwBWQHrAX0BbAFZAesBYgFeAVwBzgNO
+        AZQDJwE72AADCgENA04BlgGiAXoBTQH6AeEBzQG5Af8B8QHgAc4B/wH5AecB1gH/AfgB5gHUAf8B8AHd
+        AcwB/wHhAc0BuQH/AaIBegFNAfoDTgGWAwoBDcwAAwoBDQNXAbgB2QG/AaUB/wH+AfIB5AL/AecBzwH/
+        AfwB2wG7Af8B+QHTAbIB/wH2AdABrAH/AfQB0QGuAf8B9gHYAbsB/wH6AekB1wH/AdkBvwGlAf8DVwG4
+        AwoBDQgAA0ABcAFSAlQBpgFMAWcBgAHqATYBgQGrAfcBNgGBAasB9wE2AYEBqwH3ATYBgQGrAfcBNgGB
+        AasB9wE2AYEBqwH3ATYBgQGrAfcBNgGBAasB9wE2AYABqwH3AUQBcwGXAfEDTAGTiAADTgGWAdkBvwGl
+        Av8B+AHrAv8B6wHRAv8B4QHDAf8B/gHbAboB/wH7AdYBsgH/AfcB0QGsAf8B9gHOAakB/wHzAcsBpQH/
+        AfIBzQGoAf8B+gHhAcoB/wHZAb8BpQH/A04BlggAAVEBagF7AeYBlAGaAZsB8AGnAcIB2QH9AZ4B2wH0
+        Af8BlgHaAfMB/wGOAdgB8wH/AYYB1wHzAf8BeAHUAfIB/wFyAdMB8gH/AWsB0gHxAf8BZQHQAfEB/wFi
+        Ac8B8QH/Aa4B1gHkAf4BQwFxAZAB8IQAAyYBOAGxAYcBSgH9Av4B+gL/AfkB6QL/Ae8B2AL/AecBzQL/
+        AeEBwgH/AfwB3AG7Af8B+QHVAbMB/wH2AdABrAH/AfYBzQGoAf8B8wHLAaUB/wHzAc0BqQH/AfoB6gHZ
+        Af8BsQGHAUoB/QMmATgEAAE2AYYBqwH3Ae8B+gH+Af8BoQHpAfkB/wGRAeUB+AH/AYEB4QH3Af8BawHe
+        AfYB/wFcAdoB9QH/AU0B1wH0Af8BQAHTAfMB/wEyAdAB8gH/AScBzQHxAf8BHwHLAfAB/wHKAfIB+wH/
+        ATYBhgGrAfeEAANOAZYB4gHOAboB/wH3Ad4BxgL/AekB0QL/AfYB4gL/AfIB3QL/AfAB3QH/AfgB6gHZ
+        Af8B+AHmAdQB/wH7Ad8BxwH/AfUBzwGrAf8B8gHKAaQB/wHzAcwBqAH/AfgB3QHDAf8B4gHOAboB/wNO
+        AZYEAAE5AYgBsAH4AfIB+gH9Af8BswHtAfoB/wGkAekB+QH/AZUB5gH4Af8BhQHiAfcB/wFvAd4B9gH/
+        AV4B2wH1Af8BUAHXAfQB/wFCAdQB8wH/ATQB0QHyAf8BKQHOAfEB/wHMAfIB+wH/ATYBhwGrAfeEAAFi
+        AV4BWwHQAe8B4AHQAf8B5wG+AZYB/wHnAbwBlAH/AfABzAGpAf8B/gHsAdoB/wHdAcQBrAH/AXcBagFc
+        AecBdwFqAVwB5wHdAcMBqgH/AfgB3QHEAf8B9AHSAbIB/wH2AdQBswH/AfUB1gG4Af8B8QHfAc8B/wFi
+        AV4BWwHQBAABQQGNAbMB+QH2AfwB/gH/AcgB8gH8Af8BuQHvAfsB/wGsAewB+gH/AZwB6AH5Af8BiwHj
+        AfcB/wF1AeAB9gH/AWUB3AH2Af8BVgHZAfUB/wFIAdYB9AH/AT0B0wHzAf8B0AHzAfwB/wE2AYgBqwH3
+        hAABfAFtAVkB7AH1AeQB1QH/AekBvgGXAf8B6AG8AZYB/wHnAbwBlAH/AfMB3gHKAf8BdwFpAVgB5gMU
+        ARsDFAEbAXcBaQFYAeYB9gHjAdMB/wHxAc0BqwH/Ae8ByQGkAf8B7QHJAaQB/wH2AeQB0gH/AXwBbQFZ
+        AewEAAE+AZgBtAH6Af4D/wH4Af0C/wH2Af0C/wH1AfwC/wHzAfwB/gH/AdgB9gH8Af8BlAHmAfgB/wGF
+        AeMB9wH/AW8B3wH2Af8BYQHbAfUB/wFVAdgB9AH/AdcB9AH8Af8BNgGLAasB94QAAXwBbQFZAewB9QHk
+        AdUB/wHpAb8BmQH/AekBwAGZAf8B6QHBAZoB/wHzAd0ByQH/AXcBaQFYAeYDFAEbAxQBGwF3AWkBWAHm
+        AfgB6AHZAf8B8gHSAbIB/wHwAcwBqwH/AfABzAGrAf8B9gHkAdMB/wF8AW0BWQHsBAABPAGcAbQB+gHo
+        AfYB+wH/AZQB1AHvAf8BiAHOAe4B/wFsAcEB6QH/AckB6QH2Af8B8gH8Af4B/wHzAfwB/gH/AfIB/AH+
+        Af8B8AH8Af4B/wHvAfsB/gH/Ae4B+wH+Af8B/gP/ATcBjwGrAfeEAAFiAV4BWwHQAfAB4QHRAf8B6gHE
+        AaEB/wHpAcEBmwH/AekBwAGXAf8B8QHOAbIB/wHcAcMBqgH/AXcBagFcAecBdwFqAVwB5wHdAcQBrAL/
+        AfwB8wL/AfQB5QL/Ae4B2gH/AfwB5QHRAf8B8QHhAdEB/wFiAV4BWwHQBAABRwGDAZsB8gHxAfoB/QH/
+        AZQB3gH1Af8BkwHcAfQB/wGBAdUB8gH/AWMBygHtAf8BZQHLAeoB/wGFAdMB7wH/AYAB0gHvAf8BcwHQ
+        Ae8B/wFvAc8B7gH/AWsBzwHuAf8B6QH3AfsB/wE+AYcBmgHzhAADTgGWAeIBzgG6Af8B8QHSAbYB/wHr
+        AcEBmwH/AesBvwGZAv8B5AHTAv8B6AHbAf8B8wHaAccB/wH4AfEB5AL/AfgB7QL/AfcB6QL/Af4B8QL/
+        AfwB7wL/AfwB8gH/AeIBzgG6Af8DTgGWBAABQwF/AZAB8AH3AfwB/gH/AY4B5AH4Af8BkQHeAfUB/wGf
+        AeAB9QH/AawB4QH2Af8B7wH7Af4B/wH0Af0B/gH/AfMB/AH+Af8B8QH8Af4B/wHvAfsB/gH/Ae4B+wH+
+        Af8CywHNAfkBWAFlAWkB1IQAAyYBOAGxAYcBSgH9AfoB7QHhAf8B7AHHAaMC/wHsAdoF/wH3Ac0BtgH/
+        AewBvQGXAv8B9AHcA/8B9wL/AfcB6AP/AfMD/wH5Af8C/gH5Af8BsQGHAUoB/QMmATgEAAE5AZgBsAH4
+        Af0C/gH/Af4D/wL+Av8B/QH+Av8B/gP/AeoB9wH7Af8BagGqAboB+QFcAaMBuAH4AVwBowG4AfgBXAGj
+        AbgB+AFtAaYBtAH3AWEBbwF2AeEDNQFWiAADTgGWAdkBvwGlAv8B+gHwBv8B/QHzAf8B8AHBAaMB/wHu
+        AcYBoAH/Af0B8AHRA/8B/gL/Af0B8AL/Af0B8QX/AdkBvwGlAf8DTgGWCAABWQFiAWQB0AFNAaYBvgH6
+        AU8BpgG/AfoBTwGmAb8B+gFPAaYBvwH6AU4BpgG/AfoBWAFqAXAB3QMQARYDCwEPAwsBDwMLAQ8DCwEP
+        AwsBDwMDAQSIAAMKAQ0DVwG4AdkBvwGlAf8B/gH9AfwC/wHxAeQB/wHyAcoBrgH/AfIB0gGtAf8B+QHt
+        AcgD/wH3A/8B/QH/Af4B/QH8Af8B2QG/AaUB/wNXAbgDCgENzAADCgENA04BlgGiAXoBTQH6AeEBzQG5
+        Af8B8QHiAdQB/wH5AewB3wH/AfsB8wHlAf8B9AHtAeQB/wHiAc4BuwH/AaIBegFNAfoDTgGWAwoBDdgA
+        AycBOwNOAZQBYgFeAVwBzgF9AWwBWQHrAYEBawFYAe8BZQFgAVsB2QNPAZcDJwE70AABQgFNAT4HAAE+
+        AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAfABDwL/BAABwAEDAv8EAAGAAQEBgAEBBAABgAEB
+        AYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQQAAYABAQGA
+        AQEEAAGAAQEC/wQAAcABAwL/BAAB8AEPAv8EAAs=
 </value>
   </data>
   <metadata name="pmList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -338,7 +338,7 @@
     <value>&amp;File</value>
   </data>
   <data name="cmReadVolume.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>131, 22</value>
   </data>
   <data name="cmReadVolume.Text" xml:space="preserve">
     <value>&amp;Read...</value>
@@ -350,7 +350,7 @@
     <value>A:</value>
   </data>
   <data name="pmVolumes.Size" type="System.Drawing.Size, System.Drawing">
-    <value>152, 22</value>
+    <value>131, 22</value>
   </data>
   <data name="pmVolumes.Text" xml:space="preserve">
     <value>Read From</value>
@@ -1401,7 +1401,7 @@
     <value>6</value>
   </data>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>593, 56</value>
+    <value>0, 429</value>
   </metadata>
   <data name="sbFiles.Size" type="System.Drawing.Size, System.Drawing">
     <value>51, 19</value>
@@ -1678,6 +1678,12 @@
     <value>cmSaveAs</value>
   </data>
   <data name="&gt;&gt;cmSaveAs.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;cmImportFrom1.Name" xml:space="preserve">
+    <value>cmImportFrom1</value>
+  </data>
+  <data name="&gt;&gt;cmImportFrom1.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;cmExport.Name" xml:space="preserve">
@@ -2165,12 +2171,6 @@
   </data>
   <data name="&gt;&gt;btnWhatsNew.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripButton, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;cmImportFrom1.Name" xml:space="preserve">
-    <value>cmImportFrom1</value>
-  </data>
-  <data name="&gt;&gt;cmImportFrom1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>FrmMain</value>
