@@ -1,4 +1,5 @@
 2.0.0.13
+- Import from Octopus / Blue Mirror 1.x implemented
 - FIXED: Compressed files appear twice in the search result list. 
 
 2.0.0.12
